added profile page (almost finished)